--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>trial page</title>
 </head>
 <body>
-    <p> just to test git actions</p>
+    <p> lets test git actions</p>
     <p>this is under fix branch</p>
 </body>
 </html>
